Get By Id endpoint added to routes.
02/10/2024
