# docs/swagger_output.json
@@ -106,6 +106,19 @@
         }
       }
     },
+    "/chat/getById": {
+      "get": {
+        "tags": [
+          "Chat"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/clubEvent/create": {
       "post": {
         "description": "",
